--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   build_wheels:
+    name: Build wheels
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -53,6 +54,7 @@ jobs:
         path: dist/*.tar.gz
 
   upload_pypi:
+    name: Upload to PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     environment: pypi
