--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ install.components = ["tools", "python_modules"]
 [tool.scikit-build.wheel.packages]
 interrogate = "python/interrogate"
 interrogate_module = "python/interrogate_module"
+interrogatedb = "python/interrogatedb"
 
 [tool.cibuildwheel]
 build = "cp38-*"
