Install interrogatedb headers with interrogatedb prefix, don't install interrogate headers

--- a/src/interrogate/CMakeLists.txt
+++ b/src/interrogate/CMakeLists.txt
@@ -124,5 +124,5 @@ if(SKBUILD)
   install(TARGETS interrogate_module COMPONENT tools DESTINATION interrogate_module)
 else()
   install(TARGETS interrogate interrogate_module COMPONENT tools DESTINATION ${CMAKE_INSTALL_BINDIR})
-  install(FILES ${INTERROGATE_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/panda3d)
+  #install(FILES ${INTERROGATE_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/interrogate)
 endif()
