cppparser: Recognize z suffix for integer literals (C++23)

--- a/tests/cppparser/CMakeLists.txt
+++ b/tests/cppparser/CMakeLists.txt
@@ -7,5 +7,6 @@ function(parse_test file)
   add_test(NAME ${name} COMMAND parse_file -T ${extra_args} "-S${PROJECT_SOURCE_DIR}/parser-inc" "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
 endfunction()
 
+parse_test(literals.c)
 parse_test(recursive_macros.c)
 parse_test(stat.c)
