cppparser: Add support for namespace aliases

--- a/tests/cppparser/CMakeLists.txt
+++ b/tests/cppparser/CMakeLists.txt
@@ -11,3 +11,4 @@ parse_test(conditional.c)
 parse_test(literals.c)
 parse_test(recursive_macros.c)
 parse_test(stat.c)
+parse_test(namespace_alias.cxx)
