cppparser: Parse various new C++ features:
- Concepts and requires expressions
- Deduction guides
- Explicit object parameters (this)
- Ability to reference parameters in trailing return types and requires

Note that this adds the `this` keyword as a token.

--- a/tests/cppparser/CMakeLists.txt
+++ b/tests/cppparser/CMakeLists.txt
@@ -12,3 +12,5 @@ parse_test(literals.c)
 parse_test(recursive_macros.c)
 parse_test(stat.c)
 parse_test(namespace_alias.cxx)
+parse_test(variable_template.h)
+parse_test(concepts.h)
